# ovirt-node-plugin-vdsm

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  ovirt-node-plugin-vdsm.spec.in  version.ovirt-node-plugin-vdsm.in
autoinstall/: Makefile.am  autoreg-args  autoreg.py  ovirt-node-plugin-vdsm-autoreg
automation/: build-artifacts.sh  check-merged.req  check-patch.req
conf/: Makefile.am  vdsm-plugin.firewall  vdsm-plugin.logs
hooks/: Makefile.am  README
hooks/on-boot/: 01-vdsm-configure  03-persist-multipath-wwids  03-vdsm-sebool-config  90-start-vdsm
hooks/post-upgrade/: 01-sanlock-check
hooks/pre-upgrade/: 01-vdsm  03-persist-multipath-wwids
recipe/: Makefile.am  vdsm-plugin-iso.ks
src/: Makefile.am  __init__.py  config.py.in  engine_page.py
systemd/: Makefile.am  ovirt-node-plugin-vdsm.service
vdsm-upgrade/: Makefile.am
