AC_INIT([ovirt-node-plugin-vdsm], [0.0.2], [node-devel@ovirt.org])
AM_INIT_AUTOMAKE([-Wall -Werror foreign -Wno-portability tar-pax])

AM_PATH_PYTHON

AC_CONFIG_FILES([Makefile
                src/Makefile
                conf/Makefile
                recipe/Makefile
                ovirt-node-plugin-vdsm.spec])
AC_OUTPUT
